[tool.poetry]
name = "nautobot-panorama-ssot"
version = "3.0.0"
description = "Nautobot SSoT integration for Palo Alto Panorama"
authors = ["jmh <jmh.devnet@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/i-hart/nautobot-panorama-ssot"
repository = "https://github.com/i-hart/nautobot-panorama-ssot"
keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "nautobot_panorama_ssot" },
]

[tool.poetry.dependencies]
python = "^3.8"
nautobot = ">=3.0.0"
nautobot-ssot = ">=3.0.0"
nautobot-firewall-models = ">=3.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pylint = "^2.17.0"
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,pk,id"

[tool.pylint.format]
max-line-length = 120
